# WasmServerless

./: .gitignore  README.md  concurrent-start.sh  image_resize_benchmark.py  memory-overhead.sh  scripts.sh  serial-start.sh  serial_cold_start_results.csv  setup.sh  setup_s3_dataset.py  start_benchmark.py  test.sh
benchmark_logs_20250515_004314/: benchmark_results.csv  benchmark_summary.csv
benchmark_logs_20250515_090313/: benchmark_results.csv  benchmark_summary.csv
go/: main.go
hello_wasm/: Cargo.toml
hello_wasm/src/: lib.rs
image_resize_benchmark_20250515_084327/: benchmark_results.csv  benchmark_results.json
runtime/: Cargo.toml
runtime/src/: hostfuncs.rs  main.rs  runtime.rs  server.rs
rust/api_aggregator/: Cargo.toml
rust/api_aggregator/src/: lib.rs
rust/hello_world/: Cargo.toml
rust/hello_world/src/: lib.rs
rust/image_resizer_local/: Cargo.toml
rust/image_resizer_local/src/: lib.rs
rust/image_resizer_s3/: Cargo.toml
rust/image_resizer_s3/src/: lib.rs
rust/memory_allocator/: Cargo.toml
rust/memory_allocator/src/: lib.rs
rust/primes_sieve/: Cargo.toml
rust/primes_sieve/src/: lib.rs
rustserver/: Cargo.toml  log.txt  metrics.csv
rustserver/src/: hostfuncs.rs  main.rs  module_cache.rs  runtime.rs  runtime2.rs  server.rs  test.sh
