[package]
name = "wasm-serverless"
version = "0.1.0"
edition = "2021"


[dependencies]
wasmtime = { version = "32.0.0", features = ["component-model", "cache", "winch"] }
wasmtime-wasi = "32.0.0"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.29", features = ["full"] }
tokio-util = "0.7.15"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.4"
base64 = "0.13"
tempfile = "3.8"
tracing = "0.1"
tracing-subscriber = "0.3"
hyper = { version = "0.14", features = ["server", "http1", "tcp", "stream"] }
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.4", features = ["v4"] }
once_cell = "1.18"
num_cpus = "1.16"
tokio-stream = { version = "0.1", features = ["net"] }
sysinfo = "0.35.0"
clap = { version = "4.5.37", features = ["derive"] }
wasmtime-wasi-http = "32.0.0"
aws-config = "1.1"
aws-sdk-s3 = { version = "1.85.0", features = ["behavior-version-latest"] }
aws-credential-types = "1.1"
aws-types = "1.1"
rust-ini = "0.21.1"
dirs = "6.0.0"
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
