[package]
name = "wasm-serverless"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = { version = "10.0.1", features = ["component-model", "cache"] }
wasmtime-wasi = "10.0.1"
tokio = { version = "1.29", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.4"
base64 = "0.13"
tempfile = "3.8"
tracing = "0.1"
tracing-subscriber = "0.3"
hyper = { version = "0.14", features = ["server", "http1", "tcp", "stream"] }
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.4", features = ["v4"] }
once_cell = "1.18"
num_cpus = "1.16"
tokio-stream = { version = "0.1", features = ["net"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3